# binging-stonks

./: .gitignore  README.md  notebook.ipynb  pyproject.toml  requirements.txt
src/: main.py
src/classes/: __init__.py
src/integrations/: __init__.py  imdb.py  omdb.py
src/plotter/: __init__.py  settings.py
