[tool.poetry]
name = "binging-stonks"
version = "0.1.0"
description = ""
authors = ["Fede Calendino <fede@calendino.com>"]

[tool.poetry.dependencies]
python = "^3.10"
IMDbPY = "^2021.4.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
